# computer-enhance

./: pyproject.toml
sim8086/: pyproject.toml
sim8086/part1/: instruction_decode.py  operations.py
sim8086/src/: instruction_decode.py  operations.py
sim8086/tests/: test_instruction_decode.py
tests/: test_instruction_decode.py
tests/data/: listing_0039_more_movs.asm  listing_0040_challenge_movs.asm  listing_0041_add_sub_cmp_jnz.asm
